# semi-direct-visual-odometry

./: .clang-format  .gitignore  CMakeLists.txt  README.md
config/: config.json  log.conf
docs/: doxyfile.in
include/: algorithm.hpp  bundle_adjustment.hpp  config.hpp  depth_estimator.hpp  depth_filter.hpp  estimator.hpp  feature-selection.hpp  feature.hpp  feature_alignment.hpp  feature_selection.hpp  frame.hpp  image_alignment.hpp  image_pyramid.hpp  map.hpp  matcher.hpp  mixed_gaussian_filter.hpp  nlls.hpp  optimizer.hpp  pinhole_camera.hpp  point.hpp  system.hpp  triangulation.hpp  utils.hpp  visualization.hpp
python/: epipolar.py  symbol.py  test_image_alignment.py
resource/: denso.yaml  kitti.yaml  utils.h
src/: CMakeLists.txt  algorithm.cpp  bundle_adjustment.cpp  config.cpp  depth_estimator.cpp  depth_filter.cpp  estimator.cpp  feature-selection.cpp  feature.cpp  feature_alignment.cpp  feature_selection.cpp  frame.cpp  image_alignment.cpp  image_pyramid.cpp  main.cpp  map.cpp  matcher.cpp  misc.cpp  mixed_gaussian_filter.cpp  nlls.cpp  optimizer.cpp  pinhole_camera.cpp  point.cpp  system.cpp  triangulation.cpp  utils.cpp  visualization.cpp
tests/: test_camera.cpp  test_feature.cpp  test_feature_selection.cpp  test_frame.cpp  test_image_pyramid.cpp  test_point.cpp  test_visualization.cpp
